add new website from server na

--- a/xem-phim-bo/thu-bac/index.html
+++ b/xem-phim-bo/thu-bac/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1708,18 +1708,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-tan-sat" title="Đêm Tàn Sát">
+          <a class="list-top-movie-link" href="/phim-moi/chi-em-lam-chieu" title="Chị Em Lắm Chiêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-tan-sat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chi-em-lam-chieu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm Tàn Sát
+             Chị Em Lắm Chiêu
             </span>
             <span class="list-top-movie-item-en">
-             Dylan Dog: Dead of Night
+             Bad Sisters
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ao-thuat-gia-hang-xoang-juanqini-phan-2" title="Ảo Thuật Gia Hạng Xoàng Juanqini (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ao-thuat-gia-hang-xoang-juanqini-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ảo Thuật Gia Hạng Xoàng Juanqini (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Unremarkable Juanquini (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/police-story-lockdown" title="Police Story: Lockdown">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/police-story-lockdown-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Police Story: Lockdown
+            </span>
+            <span class="list-top-movie-item-en">
+             Police Story: Lockdown
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1730,40 +1774,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-tich-o-berlin" title="Mất Tích Ở Berlin">
+          <a class="list-top-movie-link" href="/phim-moi/slr" title="SLR">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-tich-o-berlin-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/slr-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mất Tích Ở Berlin
+             SLR
             </span>
             <span class="list-top-movie-item-en">
-             Berlin Syndrome
-            </span>
-            <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/moi-chi-dinh-nhan-vat-yeu-duong" title="Mời Chỉ Định Nhân Vật Yêu Đương">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-chi-dinh-nhan-vat-yeu-duong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mời Chỉ Định Nhân Vật Yêu Đương
-            </span>
-            <span class="list-top-movie-item-en">
-             Designated Love
+             SLR
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1774,43 +1796,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ma-ca-rong-xinh-dep" title="Ma Cà Rồng Xinh Đẹp">
-           <span class="status">
-            HD 720p Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-ca-rong-xinh-dep-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ma Cà Rồng Xinh Đẹp
-            </span>
-            <span class="list-top-movie-item-en">
-             Beautiful Vampire
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/armageddon-time" title="Armageddon Time">
+          <a class="list-top-movie-link" href="/phim-moi/black-jack" title="Black Jack">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/armageddon-time-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/black-jack-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Armageddon Time
+             Black Jack
             </span>
             <span class="list-top-movie-item-en">
-             Armageddon Time
+             Black Jack
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
