add new website from server na

--- a/xem-phim-moi/phia-duoi-song-seine/index.html
+++ b/xem-phim-moi/phia-duoi-song-seine/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1759,21 +1759,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-anh" title="Ám Ảnh">
+          <a class="list-top-movie-link" href="/phim-moi/ngon-doi-cam-lang" title="Ngọn Đồi Câm Lặng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-anh-2012-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngon-doi-cam-lang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ám Ảnh
+             Ngọn Đồi Câm Lặng
             </span>
             <span class="list-top-movie-item-en">
-             The Black Dahlia Haunting
+             Silent Hill
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1781,21 +1781,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chico-bon-bon-va-ngay-le-ngot-ngao" title="Chico Bon Bon và ngày lễ ngọt ngào">
+          <a class="list-top-movie-link" href="/phim-moi/co-mo-lau-lan" title="Cổ Mộ Lâu Lan">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chico-bon-bon-va-ngay-le-ngot-ngao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-mo-lau-lan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chico Bon Bon và ngày lễ ngọt ngào
+             Cổ Mộ Lâu Lan
             </span>
             <span class="list-top-movie-item-en">
-             Chico Bon Bon and the Very Berry Holiday
+             Kroraina Tomb - Treasure Of Kroraina
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1803,21 +1803,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kho-tim-nan-tam" title="Khó Tìm (Nan Tầm)">
+          <a class="list-top-movie-link" href="/phim-moi/ban-co-an-toan" title="Bạn Có An Toàn?">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kho-tim-nan-tam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-co-an-toan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khó Tìm (Nan Tầm)
+             Bạn Có An Toàn?
             </span>
             <span class="list-top-movie-item-en">
-             Hard to Find
+             Are You Safe
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1825,21 +1825,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dat-va-mau" title="Đất và máu">
+          <a class="list-top-movie-link" href="/phim-moi/quan-cuu-linh" title="Quân Cửu Linh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dat-va-mau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-cuu-linh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đất và máu
+             Quân Cửu Linh
             </span>
             <span class="list-top-movie-item-en">
-             Earth and Blood
+             Jun Jiu Ling
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1847,21 +1847,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lu-quy-nho" title="Lũ Quỷ Nhỏ">
+          <a class="list-top-movie-link" href="/phim-moi/loi-noi-doi-nua-voi" title="Lời Nói Dối Nửa Vời">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lu-quy-nho-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nua-loi-noi-doi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lũ Quỷ Nhỏ
+             Lời Nói Dối Nửa Vời
             </span>
             <span class="list-top-movie-item-en">
-             The Sandlot
+             Half Lies (2023 KBS Drama Special Ep 2)
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
